# hgf-analysis

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  _sc3_recovery_numbers.py  _t2_verify.py  _t_debug_variance.py  _t_eps2_inspect.py  _t_export_bs4.py  _t_export_inline.py  _verify_task1.py  _verify_task1_20_07.py  _verify_task3.py  config.py  environment-v10.yml  environment_gpu.yml  pyproject.toml  requirements-v10.txt  slurm-54768408.out  smux-55158184.err  smux-55158184.out  smux-55170356.err  smux-55170356.out
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
cluster/: 00_setup_env_gpu.sh  01_diagnostic_gpu.slurm  04_fit_mcmc_gpu.slurm  05_validation_gpu.slurm  06_analysis.slurm  08_power_sweep.slurm  09_power_postprocess.slurm  14_benchmark_array_cpu.slurm  14_benchmark_array_gpu.slurm  14_benchmark_cpu.slurm  14_benchmark_gpu.slurm  14_valid03_compare.slurm  14_valid03_cpu.slurm  14_valid03_gpu.slurm  16_smoke_test_cpu.slurm  16_smoke_test_gpu.slurm  18_smoke_patrl_cpu.slurm  21_diagnose_laplace.slurm  21_diagnose_nuts.slurm  21_diagnose_pscan.slurm  21_submit_pscan_chain.sh  25_proto_recovery_gpu.slurm  25_proto_timing_gpu.slurm  25_reproduce_reference_gpu.slurm  27_validate_deps05.slurm  99_push_results.slurm  patrl_smoke.slurm  requirements-gpu.txt  submit_full_pipeline.sh  submit_power_pipeline.sh
configs/: pat_rl.yaml  prl_analysis.yaml
docs/: CAPABILITY_MAP.md  HANDOFF_pyhgf_plot_network_extension.md  PAT_RL_API_HANDOFF.md  PAT_RL_PHASE20_HANDOFF.md  references.bib
figures/: hgf_viewer.html
logs/: bench14_55139044.err  bench14_55139044.out  bench14_55143456.err  bench14_55143456.out  bench14_55143670.err  bench14_55143670.out  bench14_55156050.err  bench14_55156050.out  bench14_55156051.err  bench14_55156051.out  bench14_55156052.err  bench14_55156052.out  bench14_55156054.err  bench14_55156054.out  bench14_55156055.err  bench14_55156055.out  patrl18smoke_55139039.err  patrl18smoke_55139039.out  patrl18smoke_55139041.err  patrl18smoke_55139041.out  smoke16_55158190.err  smoke16_55158190.out  smoke16_55158222.err  smoke16_55158222.out
manuscript/: .gitignore  _quarto.yml  paper.qmd  references.bib
notebooks/: 07_parameter_explorer.ipynb
scripts/: 05_run_validation.py  06_group_analysis.py  08_run_power_iteration.py  09_aggregate_power.py  09_run_prechecks.py  10_plot_power_curves.py  11_write_recommendation.py  12_smoke_patrl_foundation.py  14_2_aggregate_variants.py  smoke_test_pipeline.py
tests/: test_agent.py  test_batch.py  test_bench_harness_diagnostics.py  test_bms.py  test_env_pat_rl_config.py  test_env_pat_rl_sequence.py  test_env_simulator.py  test_fit_vb_laplace_patrl.py  test_fitting.py  test_group_analysis.py  test_gui.py  test_hierarchical_logp.py  test_hierarchical_patrl.py  test_jax_session.py  test_models_patrl.py  test_power_config.py  (+18 more)
(+3698 files in other folders)
