[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hgf-analysis"
version = "0.1.0"
description = "General-purpose Hierarchical Gaussian Filter analysis toolbox for reversal-learning paradigms. Supports multiple task configurations (pick_best_cue PRL, PAT-RL approach-avoidance, etc.) via YAML-driven config."
requires-python = ">=3.11"
authors = [{name = "Adam Manoogian"}]
dependencies = [
    "pyhgf>=0.2.8,<0.3",
    "jax>=0.9.0,<0.11",
    "jaxlib>=0.9.0,<0.11",
    "blackjax>=1.5,<2.0",
    "numpyro>=0.21.0,<0.22",
    "jaxopt>=0.8.5,<0.9",
    "numpy>=2.0.0,<3.0",
    "pymc>=5.25.1",
    "pandas>=2.0",
    "scipy>=1.10",
    "matplotlib>=3.4.0",
    "seaborn>=0.13.2",
    "arviz>=0.21.0",
    "ipywidgets>=8.0",
    "ipympl>=0.9.0",
    "pyyaml>=6.0",
    "jinja2>=3.1,<4",
    "groupBMC>=1.0",
    "bambi>=0.13.0",
    "pingouin>=0.5.5",
    "pyarrow>=14.0",
    "ptitprince>=0.3.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-snapshot>=0.9.0",
    "beautifulsoup4>=4.12",
]

[tool.ruff]
target-version = "py311"
line-length = 88
extend-exclude = ["data", "models", "reports", "logs", ".planning"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "FA"]
ignore = ["E402", "E501", "E741", "B023", "SIM108"]

[tool.ruff.lint.isort]
known-first-party = ["prl_hgf", "config"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]
"scripts/**/*.py" = ["D103"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "numpy.*", "pandas.*", "scipy.*", "matplotlib.*", "seaborn.*",
    "jax.*", "jaxlib.*", "pymc.*", "arviz.*", "pyhgf.*",
    "ipywidgets.*", "bambi.*", "pingouin.*", "ptitprince.*",
    "pyarrow.*",
    "blackjax.*",
    "numpyro.*",
    "jaxopt.*",
    "pytest_snapshot.*",
    "bs4.*",
    "prl_hgf.*",
    "config",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-v --tb=short --strict-markers --durations=10 -m \"not scientific\""
markers = [
    "unit: fast isolated tests (< 1s, no I/O, no heavy deps)",
    "integration: cross-module tests (< 60s, structure guards)",
    "scientific: slow validation (> 60s, parameter recovery, regression)",
    "requires_pymc: tests that require PyMC installation",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
